--- a/All-about-DataScience/day-6 Probability_Distributions/prob_06_distributions_1.ipynb
+++ b/All-about-DataScience/day-6 Probability_Distributions/prob_06_distributions_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 45,
    "id": "67d74907",
    "metadata": {},
    "outputs": [],
@@ -16,19 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 46,
    "id": "bda7731f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/3778926233.py:1: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
+      "  pd.value_counts(np.random.choice([\"H\", \"T\"], size=1000), normalize=True)\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/3778926233.py:1: FutureWarning: The behavior of value_counts with object-dtype is deprecated. In a future version, this will *not* perform dtype inference on the resulting index. To retain the old behavior, use `result.index = result.index.infer_objects()`\n",
+      "  pd.value_counts(np.random.choice([\"H\", \"T\"], size=1000), normalize=True)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "T    0.522\n",
-       "H    0.478\n",
-       "dtype: float64"
+       "H    0.526\n",
+       "T    0.474\n",
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "id": "c61f8102",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['B', 'B', 'B', 'R'], dtype='<U1')"
+       "array(['R', 'R', 'B', 'R'], dtype='<U1')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,44 +88,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "id": "97096339",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2812230813.py:2: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
+      "  pd.value_counts(rolls)\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2812230813.py:2: FutureWarning: The behavior of value_counts with object-dtype is deprecated. In a future version, this will *not* perform dtype inference on the resulting index. To retain the old behavior, use `result.index = result.index.infer_objects()`\n",
+      "  pd.value_counts(rolls)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1"
+       "R    3\n",
+       "B    1\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.count_nonzero(rolls==\"R\")\n",
-    "# pd.value_counts(rolls)"
+    "pd.value_counts(rolls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 49,
    "id": "8d43c2cf",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2793448630.py:8: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
+      "  pd.value_counts(red_values, normalize=True)\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2793448630.py:8: FutureWarning: value_counts with argument that is not not a Series, Index, ExtensionArray, or np.ndarray is deprecated and will raise in a future version.\n",
+      "  pd.value_counts(red_values, normalize=True)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "2    0.3469\n",
-       "3    0.3381\n",
-       "1    0.1544\n",
-       "4    0.1329\n",
-       "0    0.0277\n",
-       "dtype: float64"
+       "3    0.3505\n",
+       "2    0.3427\n",
+       "1    0.1550\n",
+       "4    0.1270\n",
+       "0    0.0248\n",
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 50,
    "id": "52c04c5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.3964"
+       "np.float64(2.3999)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 51,
    "id": "4911a2e9",
    "metadata": {
     "hidden": true
@@ -186,7 +218,7 @@
        "1"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 52,
    "id": "b7c0c72e",
    "metadata": {
     "hidden": true
@@ -209,7 +241,7 @@
        "0.025600000000000005"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 53,
    "id": "0692426f",
    "metadata": {
     "hidden": true
@@ -229,10 +261,10 @@
     {
      "data": {
       "text/plain": [
-       "0.025600000000000005"
+       "np.float64(0.025599999999999984)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 54,
    "id": "b6557658",
    "metadata": {
     "hidden": true
@@ -255,7 +287,7 @@
        "0.15360000000000004"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 55,
    "id": "e17cf336",
    "metadata": {
     "hidden": true
@@ -275,10 +307,10 @@
     {
      "data": {
       "text/plain": [
-       "0.15359999999999993"
+       "np.float64(0.15359999999999993)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 56,
    "id": "aef1f6e9",
    "metadata": {
     "hidden": true
@@ -301,7 +333,7 @@
        "0.3456000000000001"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 57,
    "id": "4480f30b",
    "metadata": {
     "hidden": true
@@ -321,10 +353,10 @@
     {
      "data": {
       "text/plain": [
-       "0.34560000000000024"
+       "np.float64(0.34560000000000024)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 58,
    "id": "25f49762",
    "metadata": {
     "hidden": true
@@ -347,7 +379,7 @@
        "0.34559999999999996"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 59,
    "id": "53eded77",
    "metadata": {
     "hidden": true
@@ -367,10 +399,10 @@
     {
      "data": {
       "text/plain": [
-       "0.3456"
+       "np.float64(0.3456)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 60,
    "id": "601a8530",
    "metadata": {
     "hidden": true
@@ -393,7 +425,7 @@
        "0.1296"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 61,
    "id": "af95fd2e",
    "metadata": {
     "hidden": true
@@ -413,10 +445,10 @@
     {
      "data": {
       "text/plain": [
-       "0.1296"
+       "np.float64(0.1296)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 62,
    "id": "7f5f400b",
    "metadata": {
     "hidden": true
@@ -436,10 +468,10 @@
     {
      "data": {
       "text/plain": [
-       "2.4000000000000004"
+       "np.float64(2.4000000000000004)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,17 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 63,
    "id": "8cec668f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11.264"
+       "10.32"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "basicPython (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
