--- a/All-about-DataScience/day-6 Probability_Distributions/prob_06_distributions_1.ipynb
+++ b/All-about-DataScience/day-6 Probability_Distributions/prob_06_distributions_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "67d74907",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "bda7731f",
    "metadata": {},
    "outputs": [
@@ -24,21 +24,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/3778926233.py:1: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_5156/3778926233.py:1: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
       "  pd.value_counts(np.random.choice([\"H\", \"T\"], size=1000), normalize=True)\n",
-      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/3778926233.py:1: FutureWarning: The behavior of value_counts with object-dtype is deprecated. In a future version, this will *not* perform dtype inference on the resulting index. To retain the old behavior, use `result.index = result.index.infer_objects()`\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_5156/3778926233.py:1: FutureWarning: The behavior of value_counts with object-dtype is deprecated. In a future version, this will *not* perform dtype inference on the resulting index. To retain the old behavior, use `result.index = result.index.infer_objects()`\n",
       "  pd.value_counts(np.random.choice([\"H\", \"T\"], size=1000), normalize=True)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "H    0.526\n",
-       "T    0.474\n",
+       "H    0.528\n",
+       "T    0.472\n",
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "c61f8102",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['R', 'R', 'B', 'R'], dtype='<U1')"
+       "array(['B', 'B', 'R', 'B'], dtype='<U1')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "97096339",
    "metadata": {},
    "outputs": [
@@ -96,21 +96,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2812230813.py:2: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_5156/2812230813.py:2: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
       "  pd.value_counts(rolls)\n",
-      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2812230813.py:2: FutureWarning: The behavior of value_counts with object-dtype is deprecated. In a future version, this will *not* perform dtype inference on the resulting index. To retain the old behavior, use `result.index = result.index.infer_objects()`\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_5156/2812230813.py:2: FutureWarning: The behavior of value_counts with object-dtype is deprecated. In a future version, this will *not* perform dtype inference on the resulting index. To retain the old behavior, use `result.index = result.index.infer_objects()`\n",
       "  pd.value_counts(rolls)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "R    3\n",
-       "B    1\n",
+       "B    3\n",
+       "R    1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,32 +122,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "8d43c2cf",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['B' 'R' 'R' 'B']\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2793448630.py:8: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_5156/1404449106.py:9: FutureWarning: pandas.value_counts is deprecated and will be removed in a future version. Use pd.Series(obj).value_counts() instead.\n",
       "  pd.value_counts(red_values, normalize=True)\n",
-      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_12070/2793448630.py:8: FutureWarning: value_counts with argument that is not not a Series, Index, ExtensionArray, or np.ndarray is deprecated and will raise in a future version.\n",
+      "/var/folders/j_/njpl090n1z9832p7my5n1s0c0000gn/T/ipykernel_5156/1404449106.py:9: FutureWarning: value_counts with argument that is not not a Series, Index, ExtensionArray, or np.ndarray is deprecated and will raise in a future version.\n",
       "  pd.value_counts(red_values, normalize=True)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3    0.3505\n",
-       "2    0.3427\n",
-       "1    0.1550\n",
-       "4    0.1270\n",
-       "0    0.0248\n",
+       "2    0.3460\n",
+       "3    0.3435\n",
+       "1    0.1523\n",
+       "4    0.1327\n",
+       "0    0.0255\n",
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,22 +167,23 @@
     "    num_reds = np.count_nonzero(rolls==\"R\")\n",
     "    red_values.append(num_reds)\n",
     "\n",
+    "print(rolls)\n",
     "pd.value_counts(red_values, normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "52c04c5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(2.3999)"
+       "np.float64(2.4035)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "4911a2e9",
    "metadata": {
     "hidden": true
@@ -218,7 +226,7 @@
        "1"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "b7c0c72e",
    "metadata": {
     "hidden": true
@@ -241,7 +249,7 @@
        "0.025600000000000005"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "0692426f",
    "metadata": {
     "hidden": true
@@ -264,7 +272,7 @@
        "np.float64(0.025599999999999984)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "b6557658",
    "metadata": {
     "hidden": true
@@ -287,7 +295,7 @@
        "0.15360000000000004"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "e17cf336",
    "metadata": {
     "hidden": true
@@ -310,7 +318,7 @@
        "np.float64(0.15359999999999993)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "id": "aef1f6e9",
    "metadata": {
     "hidden": true
@@ -333,7 +341,7 @@
        "0.3456000000000001"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "4480f30b",
    "metadata": {
     "hidden": true
@@ -356,7 +364,7 @@
        "np.float64(0.34560000000000024)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "25f49762",
    "metadata": {
     "hidden": true
@@ -379,7 +387,7 @@
        "0.34559999999999996"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "53eded77",
    "metadata": {
     "hidden": true
@@ -402,7 +410,7 @@
        "np.float64(0.3456)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "id": "601a8530",
    "metadata": {
     "hidden": true
@@ -425,7 +433,7 @@
        "0.1296"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "af95fd2e",
    "metadata": {
     "hidden": true
@@ -448,7 +456,7 @@
        "np.float64(0.1296)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "7f5f400b",
    "metadata": {
     "hidden": true
@@ -471,7 +479,7 @@
        "np.float64(2.4000000000000004)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,17 +505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "8cec668f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10.32"
+       "10.912"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
